<resources>
	<string name="app_name">印象西大</string>
	<string name="quit">退出</string>
	<string name="enter_gxu">欢迎来到西大:-)</string>
	<string name="card_yws">无声版</string>
	<string name="card_campus">校园版</string>
	<string name="card_life">生活版</string>
	<string-array name="campus_items">
		<item>卡通西大</item>
		<item>图说西大</item>
		<item>课堂内外</item>
	</string-array>
	<string-array name="life_items">
		<item>新生指南</item>
		<item>毕业生给新生的20条建议</item>
		<item>美食沙龙</item>
		<item>出行顾问</item>
	</string-array>
	<string-array name="yws_items">
		<item>新生群里那点事</item>
		<item>我是新生，我想说</item>
		<item>遇见•雨无声</item>
		<item>走进•雨无声</item>
		<item>倾听•雨无声</item>
		<item>《声音》</item>
	</string-array>
	<string name="sounds_title">杂志 - 《声音》</string>
	<string name="cards_at_gxu_title">卡通西大</string>
	<string-array name="cards_at_gxu">
		<item>学生证</item>
		<item>热水卡</item>
		<item>金龙卡</item>
		<item>游泳卡</item>
	</string-array>
	<string name="student_card_content"><b>学生证在学校就等于身份证，有时候要比身份证还管用。</b>在南宁附近收费景点游玩，寒暑假回家买火车票凭证能享受半价优惠，另外，也是<b>考试时必备的三证（准考证、学生证、身份证）</b>之一。\n\n
		<b>新生入学后以班级为单位进行办理。</b>\n\n
		\n补办程序：
		\n(1) 到本学院学工组提交补办学生证报告并填写《学生证办理登记表》
		\n(2) 到办公南楼三楼学生工作处学生管理登记科进行挂失和补办
		\n(3) 补办需要37元的费用，其中7元为火车优惠券。
	</string>
	<string name="hot_water_content">办理地点：在宿舍管理员处进行办理，或直接到专家楼一楼办理，每张50元，其中有10元为卡费。
		\n\n充值地点：专家楼一楼（君武楼对面），充值时间为每周二和周四下午三点到五点。
		\n\n特别提示：
		\n新生女生大部分统一住在6A， 充值时间为周二和周五下午5点到6点半，同时挂失和补办也是在这段时间。
	</string>
	<string name="golden_card_content"><b>金龙卡集门禁、饭卡、图书证于一身，功能之强大自不言喻。</b>\n\n
		充值的地方在西校园好麦饼屋对面的金龙卡处或者南苑餐厅一楼等充值点。挂失和补办在金龙卡处，补办需要15元卡费，余额可转账到新卡。\n\n
		在丢失卡后要及时挂失补办，并且重新录入信息，否则进宿舍楼和图书馆就非常麻烦了。
	</string>
	<string name="swimming_card_content">到东西校园体育馆办理，也可在体育课上向老师办理。
		\n\n<b>大二下学期每个人都必须进行游泳考试</b>，所以在空余的时候，不会游泳的同学就要努力学会咯。
	</string>
	<string name="places_at_gxu_title">图说西大</string>
	<string-array name="places_at_gxu">
		<item>水果</item>
		<item>综合楼</item>
		<item>图书馆</item>
		<item>自习室</item>
		<item>大礼堂</item>
		<item>君武馆</item>
		<item>网络楼</item>
	</string-array>
	<string-array name="drwer_items">
		<item>欢迎界面</item>
		<item>检查更新</item>
		<item>关于 印象西大app</item>
		<item>雨无声实验室出品</item>
	</string-array>
	<string name="big_building">综合楼是西大最典型的建筑物了，里面基本都是电脑，上电脑课还有英语课用得着。广西高考改卷的地方，中加孩子要经常去那里上课，夏天有空调，<b>平时需要用到电脑可以在规定的时间去</b>，周一到周五中午12点关门，下午是5点关门，到晚上7点能进去，10点就要被赶出来了。<b>建议新生选课暂时没有电脑的，综合楼是个不错的选择</b>。
	</string>
	<string name="library">图书馆是圣地！学霸最爱的地方，桑拿天避暑的最佳去处。图书馆夏天有空调，冬天也暖和，还有开水打。
		\n\n（1）开馆时间：除一楼全天开放外，其他楼层开放时间和上下课时间大致一样。
		\n（2）楼层介绍
		\n<b>一楼</b>：报纸阅览、期刊检索区，以及办证管理处楼
		\n<b>二楼</b>：电子阅览区
		\n<b>三楼</b>：人文类书籍，小说多，妹纸也多
		\n<b>四楼</b>：自然社科类书籍，理工科类的书多，汉子多
		\n<b>五楼</b>：综合书刊阅览室。书籍不能外借
		\n<b>六楼</b>：外文、古籍阅览室，高端大气上档次
		\n\n（3）温馨贴士：
		\n在图书馆手机要调成静音，男生穿拖鞋不许进馆，<b>女生也最好不要穿高跟鞋，噪音特别大</b>。借书期限为一个月，逾期每天每本书罚款一毛钱，并且需要还书之后才能继续借书。在一楼大厅有借书还书自助终端，非常便捷。
	</string>
	<string name="classroom">在西大，<b>只要是没有上课的教室你都可以暂时把它当成自习室。</b>
		\n\n东校园：6教、7教、8教、10教、11教（其中6教和8教一楼为通宵自习室）
		\n西校园：1教、2教、3教、4教（其中2教和3教一楼为通宵自习室）
		\n\n不过现在6教刚刚被拆。总的来说，像图书馆和自习室这种地方只有在考试周的时候才会特别抢手，<b>平常座位还是很多的~</b>
	</string>
	<string name="hall">刚刚翻新！像各个学院举行的晚会还有十大歌手这样大型的节目时就会用到。新生刚开始一周开的各种会也是在大礼堂。
	</string>
	<string name="junwu_building">貌似没有事的话基本不踏足，都是一些领导开会的地方，院级校级的一些讲座也经常在这里举办。
	</string>
	<string name="network_building">网络楼应该是西大最高的教学楼了。同学们要是<b>办校园网的就是到这里办理了</b>，新生刚开学没有带电脑就可以来网络中心开通校园网，用图书馆等地方的电脑上网。
	</string>
	<string name="fruits">水果</string>
	<string name="study_inside_outside_title">课堂内外</string>
	<string-array name="study_inside_outside">
		<item>选课指南</item>
		<item>那些年我们一起抢过的课</item>
		<item>校园活动连连看</item>
		<item>社团纵览</item>
	</string-array>
	<string name="select_courses">下学期的选课一般从本学期的倒数第三周开始，学生缴清各项费用并注册后方能登陆选课系统进行选课。\n\n选课步骤：“进入学校主页——网上选课系统——登录——网上选课（体育课、校选课、专业课）”\n\n选课刚开放时出现的“<b>Service
		Unavailable</b>”字样正是由于同期登录操作的学生用户太多而造成服务器拒绝访问的情况。可以尽量避开选课高峰期以免遇到这种情况。
	</string>
	<string name="course_recommendation">学长学姐来推荐：\n\n
		\n\n<b>黄艳霞老师的大学生心理健康教育</b>， 老师脾气好，去过美国留学，喜欢主动与学生谈心，期末开卷。
		\n\n<b>文国艺老师的生命科学导论</b>，这大概是西大最出名的校选课老师了，上课视频上过凤凰网哦~
		\n\n<b>刘希岩老师的女性学概论</b>，女生必选　老师学识渊博 不出意外的话期末作业是办一份手抄报
		\n\n<b>姚怡老师的多媒体应用技术</b>，平时可以学到很多东西，很有用哦~
		\n\n<b>袁经文老师的中国禅宗智慧</b>，很敦厚儒雅的一个老师，上课视频教学，会经常和学生探讨一些禅宗和哲学问题，对人生很有感悟。
		\n\n<b>庄启林老师的运动损伤与按摩</b>，老师风趣幽默，不仅能学到不少养身保健知识，分数也不低。
	</string>
	<string name="campus_activities">
		三月份：<b>女生节</b>
		\n\n四月份：<b>雨无声网友节</b>
		\n\n五月份：<b>各个学院的技能文化节</b>
		\n\n六月份：<b>荷花节</b>
		\n\n七月份：<b>考试周</b>
		\n\n八月份：<b>大二学生军训</b>
		\n\n九月份：<b>迎新、各社团学生会招新</b>
		\n\n十月份：<b>十大歌手比赛</b>
	</string>
	<string name="campus_parties">
		大学期间不加入一个好玩的社团怎么行？
		\n\n每年新生开学后一周各个社团的招新就开始了，主要在学校的6B小广场、金融街、碧湖苑设点宣传、招新。西大的社团涉及范围广，活动丰富，数量多达六十余个，每个社团都是一个学习生活的好地方。社团分类如下：
		\n\n<b>公益实践类社团</b>
		\n绿色环保协会、经济学社、爱心协会、勤工实践协会、青年志愿者协会等。
		\n\n<b>学术类社团</b>
		\n数学建模协会、英语爱好者协会、企业管理竞赛协会、文学联社等。
		\n\n<b>艺术类社团</b>
		\n摄影协会、音乐爱好者协会、新元素协会、广告协会、魔术协会等。
		\n\n<b>体育类社团</b>
		\n自行车协会、羽毛球协会、武术协会、棋牌协会、乒乓球协会等。
		\n\n想要了解更多社团资讯的同学可以登录广西大学社团人之家网站进行了解，或者登录新浪微博<b>@广西大学雨无声网站</b>，我们愿意为你耐心解答~
	</string>
	<string name="refresh_guides_title">新生指南</string>
	<string name="refresh_guides_content">
		安全和防盗小窍门 \n\n
		1、不能随便留宿不知底细的人；\n
		2、最后离开宿舍的同学要注意关好窗，锁好门；\n
		3、注意保管好自己的钥匙，不要随便借给他人；\n
		4、在无人看管的情况下手机不要充电，电脑不用时放入保险柜；\n
		5、自行车、电单车。如停放时间较长，最好将车锁固定在物体上；\n
		6、对形迹可疑的陌生人应提高警惕，应积极向宿舍管理部门或保卫部门反映；\n
		7、在图书馆看书或者在体育场锻炼时，不要将自己的包或者贵重物品放在一旁，或者用来占座。\n
		8、现金及银行信用卡。现金最好存入银行，特别要注意的是，存折、信用卡等不要与自己的身份证、学生证等证件放在一起；\n
		9、校园人多车多，在校园行走过马路时，要注意来往的车辆；\n
		10.校园内人流比较混杂，所以晚上最好不要单独出行，要注意人身安全。
	</string>
	<string name="tips_title">毕业生给新生的20条建议</string>
	<string name="tips_content">
		1、<b>“沉潜”</b>。当你进入一个令你、令父母骄傲地学府，尽早收起你的傲气，尽早从高考的成就和兴奋中脱离出来，踏踏实实学一点什么。如果你发现你大学四年之后值得夸耀的还只有你的分数，那么这四年是失败的。高考前这个时段，你靠努力或聪明赢了很多人；但如果你一直沉浸在这种喜悦中而不知进取，那些曾经输给你的人会用这四年时间弥补差距甚至大大超过你。
		\n\n2、<b>“真诚”</b>。真诚对待你的室友、朋友。大学四年毕业后，你会发现这是一段有笑有泪、绝对不能割舍忘怀的回忆。天南地北的独生子女聚在一个房间，每个人都有每个人的个性，每个人都有每个人的脾气。但是每个人，也有每个人的闪光点，深入交流，你会发现你们原来可以再烧烤摊聊得忘了时间，可以在失恋时抱头痛哭，而绝不是因为一点小事冷战半月，毕业后也再不相见。
		\n\n3、<b>“负责”</b>。如果你热爱你的专业，就用热情去好好学习它；如果你对你的专业仅仅是不讨厌，就用责任感去鞭策自己好好学习它。“对专业不感兴趣”不是你翘课玩耍的理由，只有你能对你自己负责。
		\n\n4、<b>“早”</b>。如果你想要转专业，提早着手做准备。如果你想出国，提前规划好外语学习；如果你想要毕业就工作，提早做好职业规划、想好实习目标。许多毕业生推研、就业、出国的决定到打死都没有做好，结果哪一项都做不成。如果你不能确定自己是那种每一项都能做好的强人，请尽早选定自己的方向。
		\n\n5、<b>做“晨型人”</b>。回顾四年，当你发现你的大学时光被睡掉一般的时候，会不会感到失落？有的人一天可以比他的室友多出8个小时支配，大学四年过去了，学业有成样样优秀，社团也很出色，体型锻炼得匀称健美，游玩娱乐逛街一样没少，还精力十足。他的室友早课不上，下午课看心情，懒得锻炼懒得去社团，有精神打打游戏，没精神倒头就睡，最后勉强混了个毕业，最重要的是已经习惯了懒散，再也难有青年人的活力了。做一个“晨型人”吧，四年后你一定会感谢这个决定带给你的收获。
		\n\n6、<b>继续读书</b>。泡图书馆。专业书或者兴趣书，都可以拿来读。书会带你领略不同地方人的生活，不同背景人的思考，不同结局的故事，不同的人生。沉浸你的心情，或提高你的专业素质，打开一本书“赚”的可能性总是更大，而打开一个网页，你很可能“赔”上一个下午。大学或许是学习的自由度最高的一段时间，从自主性和时间上来说都是这样。毕业后你会发现，真正读一本书的机会多么少。
		\n\n7、<b>关心父母</b>。进入大学，除了你要适应集体生活之外，父母也要开始适应家里空空荡荡的生活。或许就是从这个时点开始，我们与父母每年相见的时间越来越有限。打个电话、视频QQ都可以，让他们知道你过得很好，让他们看到你的脸，听到你的声音。对他们有耐心，就像他们无数次耐心地对待你一样。
		\n\n8、<b>融入集体</b>。少做宅男宅女，更多地融入你的系所、班级。参加集体活动，认识每一个人，了解他们，也让他们了解你。展示你自己，不怕丢脸参加一次歌唱比赛、演讲比赛、话剧比赛。学会做一个社会人，你不能再等着别人认识到你有多么优秀。
		\n\n9、<b>坚持锻炼身体</b>。毕业后，你会发现大学时代最大幸福就是自由。有自由的时间可以支配，你有无穷的可能性。这些可能性中，锻炼身体是令其他所有项目圆满运转的基础。
		\n\n10、<b>不要怕求助</b>。课业、校园生活、职业规划方面，师兄师姐、辅导员老师都是很好地请教对象。恋爱、家庭方面的问题，朋友、室友是很好的倾诉对象。如果真的找不到任何人求助，还有网络求助和学校的心理咨询、就业咨询等专门咨询室的大门为你敞开。记住，你永远不是走投无路，一个人是不能只靠自己走完一生的，永选不要让事情发展到无可挽回的地步。
		\n\n11、<b>熟悉你大学所在的城市</b>。读大学的同时，也是在读一座城市。很大可能你会留在这里，熟悉城市里公共资源的分布。如果你终将离开，大学这几年也不能没有关于这座城市的东西可以回忆。
		\n\n12、<b>学会分享</b>。不论是一个橘子、一袋饼干还是一个实习信息、一个项目作业要求，互通有无是一个好习惯。自私的人只会作茧自缚，而分享会让你有很多意想不到的收获。
		\n\n13、<b>适度娱乐</b>。至今为止看过太多将大学中很大一部分时间用于网游、电视剧上的男男女女，回顾那一段就像抽鸦片一样上瘾的日子，他们能回忆起来的只有空虚。或许他们会很潇洒地说一句“我不后悔，那就是青春”或者“即使这样我现在不是也过得很好么”，但请你始终记住，青春属于奋斗，而奋斗也属于青春。他们本能取得更大的成就。
		\n\n14、<b>无论你遇到什么难处，不要轻生</b>。如果你闭上眼睛跳下去，想要结束那些困扰你的痛苦，那么你同时也结束了那些你将来可能着到的美好。人生是只属于自己的一次难得的奇妙体验，没有什么比生命本身更庄严伟大，即使你毕设三稿被退，即使你感情受挫，即使你家庭变故，请记住，你的未来还有无限可能性，还有无数温暖的手等着拉你一把。
		\n\n15、<b>花钱有计划</b>。不论你的室友、朋友是什么消费水平，要正视自己家庭的经济水平，合理花销。学生时代的贫穷不代表什么，你应该羡慕其他的财富，比如笔下生花，比如阅书万卷。
		\n\n16、<b>认识不同省市、不同院系的人</b>。通过与他们交谈联系，了解不同地域人的习惯想法，了解不同专业的典型思考方式，要更有同理心、理解力。
		\n\n17、<b>争取你能争取到的“公平”</b>。不要曲意逢迎，但也不要冲动行事。大学里有一些事情会让你觉得不公平，但社会上就更多了。单纯的抱怨或谩骂解决不了问题，你要试着用积极的态度去面对和商讨，或者足够优秀到自己来改变它。
		\n\n18、<b>观察每个人</b>。师姐师兄在做什么，室友在做什么，毕业生在做什么。认清自己想要效仿和绝不苟同的，始终意识到自己处于大学四年的那个阶段，四年匆匆而逝，大学不会等你认清了再给你弥补的机会，不是所有的经验一定要自己经历了才能适用，有关教训和捷径的戏剧其实每夭都在大学里上演，你要找到你需要观看的那个频道。
		\n\n19、<b>改变一个坏习惯永远不怕白晚</b>。大学论坛上经常看到有人询问，“我已经大三了，绩点很差，还有希望去国外深造么?”“我都大四了还没什么实习经历，怎么办啊?”焦虑只有负面作用，“从现在开始改变”或许是这些所有问题的解决方式。当然更好的方式是避免最后出现这样的情况，所以大一开始的规划是必要的，这样当别人焦虑的时候，你就可以看着自己的计划表，自如地安排你的未来了。
		\n\n20、<b>最后一条，不论如何，享受大学生活</b>。这是一段神奇的、不该错过的日子。无数人在大学里痛苦欢笑，爱恨别离x亦歌亦狂。大学带给每个人的，只有每个人自己真正去经历才能体会。当你收拾好行李准备离开，看着杂乱的住了四年的宿舍心生唏嘘的时候，你一定会想起四年前的某个夏末，你第一次推开门看到它的，那份心情。
	</string>
	<string name="food_title">美食沙龙</string>
	<string name="food_content">
		南宁没有什么特别著名的名菜，主要<b>以老友粉和粉饺及各种酸品、粥品小吃最为出名</b>。下面简单为各路吃货们介绍一下南宁美食。\n\n
		\n\n主要美食街：
		\n\n<b>中山路</b>：中山路是南宁名副其实的小吃街。这里餐馆云集，热闹非凡，夜间更是灯火通明，香飘不断，名小吃有南宁酸野、老友粉(大同粉店、复记老友粉最为有名)、八珍伊面(仙池饭店)、牛杂粉、乌鸡饭、炒田螺、白果芋泥等。
		\n\n<b>农院路</b>：这里是各类烧烤摊的聚集地，扎啤、烤鱼、炒螺，邀上几个好友一起享受南宁的夜生活再也合适不过了。除此之外，随着夜市越来越热闹，农院路上还吸引了不少外来创业者，台湾奶茶、各地的小吃，可以说是绝对让你目不暇接！
		\n\n<b>新民路</b>：有东北饺子店的特色饺子，连升茶楼的连升米粉和螺丝粉，生力军餐厅的豆浆油条、牛杂萝卜、油豆腐和烫青菜，天助粉店的老友粉；
		\n\n<b>七星路</b>：主要以富豪饼、马肉粉、柳州烧肠粉为名；
		\n\n<b>古城路</b>：广州肠粉和瓦煲汤无一不是花样多多，美味便宜，令人垂涎三尺。
		\n\n特色美食：
		\n\n1、<b>老友粉</b>：在南宁各处都可品尝到正宗的老友粉，街边的老友粉价钱都在5元上下，物美价廉，常常让人吃的汗流浃背，辣的痛快而欲罢不能。
		\n\n2、<b>八仙粉</b>：相传它是根据清宫食谱配有山珍、海味、时鲜等八味以上的调料，味道相异相辅，就像“八仙过海，各显神通”一样能将米粉的滋味调到最佳，故而得名。
		\n\n3、<b>干捞粉</b>：制法是把米浆蒸熟后切成条形，拌以调制好的叉烧、肉末、葱花、炸花生、酱料、香油等即可食用。
		\n\n4、<b>粥品</b>：南宁人早餐爱吃粥，粥也有十几个品种之多。有瘦肉粥、猪红粥、鱼片粥、红豆粥、皮蛋粥、田鸡粥等。
		\n\n5、<b>酸品</b>：酸品在南宁方言叫“酸野”。制作是采用当地物产木瓜、萝卜、黄瓜、莲藕、椰菜、菠萝等时令果蔬，配以酸醋、辣椒、白糖等腌制而成。
	</string>
	<string name="outside_title">出行顾问</string>
	<string name="outsiede_content">
		<b>喜欢逛街的同学注意了~</b> 下面为大家介绍一下市中心的逛街好去处。
		\n\n<b>南宁百货大楼</b>：南宁老字号，全国大型百货商场之一，主要经营中高档商品。位于繁华的商业中心，周围有众多餐饮娱乐场所，交通便利。
		\n\n<b>新朝阳</b>：新兴的购物之地，集餐饮购物于一身，餐饮方面有KFC、M记、小肥羊火锅城、开心吧、花房、傣妹火锅等。
		\n\n<b>沃尔玛</b>：全球最大的超市连锁店，各种商品齐全，还有诸多进口产品。现在南宁有两家分店，一家在万达广场，另一家在航洋国际城。
		\n\n<b>百佳汇</b>：位于市中心的地下购物中心，多销售衣服、女生小饰品、鞋包、礼品等，是各位女生的购物好去处。
		\n\n<b>裕丰潮流先锋</b>：多为私人经营的小铺、也有品牌专卖店。内有许多时尚的衣服及鞋包，物美价廉，可以杀价，倍受美眉们青睐。
		\n\n<b>步行街</b>：南宁老牌购物中心，有各种小店，美特斯邦威和以纯都在此设有大卖场。
		\n\n<b>万达广场</b>：配套齐全，包括餐饮小吃、电影院、KTV、数码科技广场。还有许多服装品牌、精品店、饰品店。也是沃尔玛的所在。
		\n\n<b>百盛</b>：有许多国内国际知名品牌，并设有地下超市，主营中高档商品。
		\n\nＰＳ：以上shopping地都集中在市中心，<b>搭乘33，10，8，4，西乡塘专线，31（东门），72（东门），到朝阳广场站下均可到达</b>。另外，西大正门的新世界、东门的商业街、农院路的夜市，也是绝对不容错过的！
		\n\n\n另外，为大家介绍几处近的景点，方便周末游玩~
		\n\n<b>青秀山旅游名胜风景区</b>：内拥有中国最大的苏铁园、热带雨林大观园、棕榈园、龙象塔、凤凰头、观音禅寺等景观以及国际高尔夫球场可由西大正门乘10、33至青山大门站下；
		\n\n<b>良凤江国家森林公园</b>：可满足游客游览、烧烤、登山、划船、垂钓、游泳、森林浴、会议、度假、科普、科研、文化娱乐、集体活动等，可在朝阳广场乘301路直达；
		\n\n<b>扬美古镇</b>：扬美古镇始建于宋代，至今已有上千年的历史，是南宁市明清古建筑保留得最为完整的地方，保留下来的文化遗产遍布全镇，现有二百多处，大多分布在古镇内的各街巷里，特色鲜明的明清民居有的还完好无损，因此今天又得名“扬美古镇”。
		\n\n<b>广西科技馆</b>：位于民族大道20号原广西科技馆旧址内, 它包括科普展览、科技培训、青少年活动中心、国内外科技交流与活动、高科技影视、业务管理及后勤保障服务。
		\n\n<b>石门森林公园</b>：主要景点有果木观赏区、森林保健区、嬉水游乐区、烧烤服务区等。在西大正门可乘43、52、76路到石门森林公园站下；
		\n\n<b>人民公园</b>：园内有一约7万平方米的白龙湖，湖水澄碧。湖岸翠竹掩映，垂柳摇曳。湖心有小岛，岛西的九曲桥和岛北的三孔月桥将岛与湖岸相连，有全区规模最大、数目最多、品种最全的荫生植物园。
		\n\n<b>南湖公园</b>：在这个公园中，湖的面积占总面积的四分之三，湖水澄碧，湖岸上芳草绿树相依。荡舟湖中，临湖垂钓，都会令人心旷神怡，乘8路，14路（东门），33路可到。
	</string>
	<string name="yws_refresh_group_title">新生群里那点事</string>
	<string name="sounds_desc">
		为了丰富雨无声的新闻、理念、文化的传播途径，增加雨无声网媒的传播渠道，我们特别推出雨无声创办的杂志《声音》，我们将在雨无声客户端定期的更新，传播更多的西大声音。在美丽的西大校园里，让我们一起倾听更多的声音，让我们传播更多的正能量，让我们在这里慢慢的读懂西大。
		\n\n以下是两篇节选
	</string>
	<string name="excellent_graduate_title">优秀毕业生 - 走近卢冰洁和她的“法学梦”</string>
	<string name="weekly_images_title">一周图集</string>
	<string name="app_author">app制作\n龙凯</string>
	<string name="paper_scheme">内容策划\n雨无声网站</string>
	<string name="app_design">app设计\n陆鹏 (QQ)814735658\n龙凯 im.longkai@gmail.com</string>
	<string name="image_design">app图片制作\n陆鹏\n龙正飞 (QQ)896211093</string>
	<string name="copyright"><b>The MIT License (MIT)
		\nCopyright (c) 2013 newgxu.cn
		\nThe software shall be used for good, not evil.</b></string>
	<string name="paper_design">总设计\n雨无声技术部</string>
	<string name="wish">欢迎学弟学妹们走进西大！</string>
</resources>