<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
		android:id="@+id/fragment_container"
		android:layout_width="match_parent"
		android:layout_height="match_parent">


	<LinearLayout
			android:orientation="vertical"
			android:layout_margin="@dimen/default_margin"
			android:padding="@dimen/default_padding"
			android:layout_width="match_parent"
			android:layout_height="wrap_content">

		<!--<ImageView
				android:id="@+id/logo"
				android:src="@drawable/meet_yws"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:scaleType="centerCrop"
				android:contentDescription="@string/sounds_title"
				/>-->

		<TextView
				android:id="@android:id/content"
				android:layout_height="wrap_content"
				android:layout_width="match_parent"
				android:textAppearance="?android:textAppearanceMedium"
				android:text="@string/sounds_desc"
				android:paddingBottom="10dp"
				android:textColor="@color/text"
				/>

		<View
				android:layout_width="match_parent"
				android:layout_height="1dp"
				android:background="@color/holo_green_dark"
				/>

		<TextView
				android:id="@android:id/text1"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="10dp"
				android:layout_marginBottom="10dp"
				android:textAppearance="?android:textAppearanceListItem"
				android:text="@string/excellent_graduate_title"
				android:textColor="@color/text"
				/>

		<TextView
				android:id="@android:id/text2"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:textAppearance="?android:textAppearanceListItem"
				android:text="@string/weekly_images_title"
				android:textColor="@color/text"
				/>

	</LinearLayout>
</ScrollView>